# phgasnets

./: .devcontainer.json  .gitignore  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  Dockerfile  Dockerfile.dev  Dockerfile.run  README.md  RUNME.sh  docker-compose.yml  pyproject.toml  requirements.txt  spack.yaml  vcpkg.json
demos/: CMakeLists.txt
demos/four_compressor_types/: CMakeLists.txt  README.md  config.json  config_fcam.json  config_fcav.json  config_fpam.json  config_fpav.json  config_nocompressor.json  four_compressor_types.cpp  plot  plotall
demos/single_pipe/: CMakeLists.txt  README.md  config.json  plot  results_pHCha09.h5  single_pipe.cpp
demos/two_pipe_compressor/: CMakeLists.txt  README.md  config.json  plot  results_pHCha09_compressor.h5  two_pipe_compressor.cpp
docs/: compile.md  conf.py  docker.md  getting-started.md  index.md  reproduce-results.md  spack.md  vcpkg.md
include/phgasnets/: compressor.hpp  derivative.hpp  gasconstant.hpp  io.hpp  network.hpp  operators.hpp  phgasnets.hpp  pipe.hpp  state_operators.hpp  steady.hpp  transient.hpp  utils.hpp
src/: CMakeLists.txt  compressor.cpp  derivative.cpp  gasconstant.cpp  io.cpp  network.cpp  operators.cpp  pipe.cpp  steady.cpp  transient.cpp  utils.cpp
